working on content ui

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,7 @@
   <title>WEBSITE HYEMIN</title>
 </head>
 
-<body id="page-top">
+<body id="page-top" class="sidebar-toggled">
   <app-root></app-root>
 </body>
 
