--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
   <!-- include summernote: wysiwyg editor style -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote-bs4.css" rel="stylesheet">
 
-  <base href="./">
+  <base href="/">
   <title>WEBSITE HYEMIN</title>
 </head>
 
