message sending functionalities & clean up.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
   <title>WEBSITE HYEMIN</title>
 </head>
 
-<body id="page-top" class="sidebar-toggled">
+<body>
   <app-root></app-root>
 </body>
 
