--- a/frontend/src/assets/terms-of-use.html
+++ b/frontend/src/assets/terms-of-use.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
+    <title>Terms of Use</title>
   </head>
   <body>
     <h2>Welcome to Website</h2>
